# FigurePainter

./: .gitignore  CMakeLists.txt  NewGenerationLabs.pro  abstractfigure.cpp  abstractfigure.h  dotMain.cpp  dotOnSurface.cpp  dotOnSurface.h  figures.cpp  figures.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypainter.cpp  mypainter.h  template.cpp  wombat-style.xml
CoordinatesTemplate/: CMakeLists.txt  Makefile  dotOnSurface.h  main.cpp
Figures/: figures.cpp  figures.h
Lab8/: dotMain  dotMain.cpp  dotOnSurface.cpp  dotOnSurface.h  template  template.cpp
Painter/: mypainter.h
View/: mainwindow.cpp  mainwindow.h  mainwindow.ui
